<resources>
    <string name="app_name">NutriAI</string>
    <string name="hey_login_now">Hey,\nLogin Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_a_new_account">Register,\nA new account</string>
    <string name="username">Username</string>
    <string name="your_full_name">Your full name</string>
    <string name="your_age">Your age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_weight">Your weight</string>
    <string name="your_height">Your height</string>
    <string name="weight_gain">Weight gain</string>
    <string name="losing_weight">Losing weight</string>
    <string name="maintain_current_weight">Maintain current weight</string>
    <string name="improve_overall_health">Improve overall health</string>
    <string name="muscle_gain">Muscle gain</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="be_vegetarian">Be vegetarian</string>
    <string name="keto">Keto</string>
    <string name="paleo">Paleo</string>
    <string name="there_is_no_specific_diet">There is no specific diet</string>
    <string name="don_t_exercise">Don\'t exercise</string>
    <string name="light_exercise">Light exercise (e.g. walking)</string>
    <string name="moderate_exercise">Moderate exercise (e.g. jogging, yoga)</string>
    <string name="heavy_exercise">Heavy exercise (e.g. gym, sports)</string>
    <string name="diabetes">Diabetes</string>
    <string name="high_blood_pressure">High blood pressure</string>
    <string name="high_cholesterol">High cholesterol</string>
    <string name="obesity">Obesity</string>
    <string name="cardiovascular_diseases">Cardiovascular diseases</string>
    <string name="irritable_bowel_syndrome">Irritable Bowel Syndrome (IBS)</string>
    <string name="kidney_disease">Kidney disease</string>
    <string name="osteoporosis">Osteoporosis</string>
    <string name="arthritis">Arthritis</string>
    <string name="anemia">Anemia</string>
    <string name="gluten_allergy">Gluten allergy</string>
    <string name="lactose_intolerance">Lactose intolerance</string>
    <string name="seafood_allergy">Seafood allergy</string>
    <string name="peanut_allergy">Peanut allergy</string>
    <string name="nut_allergy">Nut allergy</string>
    <string name="egg_allergy">Egg allergy</string>
    <string name="soy_allergy">Soy allergy</string>
    <string name="question_full_name_age">Full name, age</string>
    <string name="question_gender">Gender</string>
    <string name="question_weight_height">Weight, height</string>
    <string name="question_health_goal">What health goal do you want to achieve?</string>
    <string name="question_diet_plan">Do you follow any of the diet plans below?</string>
    <string name="question_allergies">Do you have any food allergies?</string>
    <string name="question_physical_activity">What kind of physical activity do you usually engage in?</string>
    <string name="question_health_issues">Do you have any health issues that need attention when planning your meals?</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="nutrition_goal">Nutrition goal</string>
    <string name="diet_preference">Diet preference</string>
    <string name="food_allergies">Food allergies</string>
    <string name="physical_activity">Physical activity</string>
    <string name="health_conditions">Health Conditions</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="personal_information">Personal Information</string>
    <string name="overal_health">Overal Health</string>
    <string name="health_overview">Health Overview</string>
    <string name="search">Search</string>
    <string name="search_for_meals">Search for meals</string>
    <string name="view_profile">View Profile</string>
    <string name="welcome_to_your_dashboard">Welcome to your dashboard</string>
    <string name="hi_s">Hi, %s!</string>
    <string name="categories">Categories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="snack">Snack</string>
    <string name="noodle_soups">Noodle Soups</string>
    <string name="rice_dishes">Rice Dishes</string>
    <string name="soups">Soups</string>
    <string name="hotpots">Hotpots</string>
    <string name="appetizers_and_street_food">Appetizers and Street Food</string>
    <string name="vegetarian_dishes">Vegetarian Dishes</string>
    <string name="desserts_and_sweet_snacks">Desserts and Sweet Snacks</string>
    <string name="seafood_dishes">Seafood Dishes</string>
    <string name="grilled_dishes">Grilled Dishes</string>
    <string name="steamed_dishes">Steamed Dishes</string>
    <string name="street_snacks_and_beverages">Street Snacks and Beverages</string>
    <string name="ver_1_0">ver 1.0</string>
    <string name="language">Language</string>
    <string name="avoid_these">Avoid these</string>
    <string name="no_meals_found">No meals found</string>
    <string name="all">All</string>
    <string name="meal_details">Meal Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition_information">Nutrition Information</string>
    <string name="instructions">Instructions</string>
    <string name="protein_g">Protein: %1$dg</string>
    <string name="carbohydrates_g">Carbohydrates: %1$dg</string>
    <string name="fats_g">Fats: %1$dg</string>
    <string name="fiber_g">Fiber: %1$dg</string>
    <string name="sugar_g">Sugar: %1$dg</string>
    <string name="protein_f">Protein: %.2f %%</string>
    <string name="carbohydrates_f">Carbohydrates: %.2f %%</string>
    <string name="fats_f">Fats: %.2f %%</string>
    <string name="fiber_f">Fiber: %.2f %%</string>
    <string name="sugar_f">Sugar: %.2f %%</string>
    <string name="protein_ff">Protein: %.2f</string>
    <string name="carbohydrates_ff">Carbohydrates: %.2f</string>
    <string name="fats_ff">Fats: %.2f</string>
    <string name="fiber_ff">Fiber: %.2f</string>
    <string name="sugar_ff">Sugar: %.2f</string>
    <string name="add_meal_history">Add Meal History</string>
    <string name="meal_name">Meal name</string>
    <string name="enter_meal_name">Enter meal name…</string>
    <string name="save">Save</string>
    <string name="available_meals">Available Meals</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="protein_g_2">Protein (g)</string>
    <string name="carbohydrates_g_2">Carbohydrates (g)</string>
    <string name="fats_g_2">Fats (g)</string>
    <string name="fiber_g_2">Fiber (g)</string>
    <string name="sugar_g_2">Sugar (g)</string>
    <string name="meal_added_successfully">Meal added successfully</string>
    <string name="please_enter_meal_name">Please enter meal name</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="total_calories">Total calories</string>
    <string name="this_month">This month</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_history_meal">Add History Meal</string>
    <string name="edit_history_meal">Edit History Meal</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="successfully">Successfully</string>
    <string name="favorite_meals">Favorite Meals</string>
</resources>